# secoli-SCEd

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  SCEd.cfg  TODO  config.h  config.h.in  config.status  configure  configure.in  count-svn
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
docs/: Descrizione_SCE_25JUL2013.xls
mth/: README.md  mth-extract
scripts/: Makefile  Makefile.am  Makefile.in  SCEd-client.py  SCEd.janitor  default-SCEd  init-SCEd.LSB  init-SCEd.LSB.in
src/: Makefile  Makefile.am  Makefile.in  client.c  client.h  commands.c  commands.h  consular_district.c  consular_district.h  consulate.c  consulate.h  daemon.c  daemon.h  encoder.c  encoder.h  help.c  help.h  identity.c  identity.h  location.c  location.h  main.c  main.h  node.c  node.h  options.c  options.h  output.c  output.h  output_csv.c  output_csv.h  output_flat.c  output_flat.h  output_json.c  output_json.h  output_void.c  output_void.h  parse.c  parse.h  queue.c  (+29 more)
src/.deps/: client.Po  commands.Po  consular_district.Po  consulate.Po  daemon.Po  encoder.Po  help.Po  identity.Po  location.Po  main.Po  node.Po  options.Po  output.Po  output_csv.Po  output_flat.Po  output_json.Po  output_void.Po  parse.Po  queue.Po  report.Po  ring.Po  sce.Po  search.Po  session.Po  sock.Po  sock2.Po  topology.Po  user.Po  utils.Po  xalloc.Po  xconfig.Po  xsqlite.Po  zipcode.Po
