## Process this file with automake to produce Makefile.in

sbin_PROGRAMS = SCEd

SCEd_SOURCES = client.c client.h commands.c commands.h consular_district.c consular_district.h consulate.c consulate.h daemon.c daemon.h encoder.c encoder.h help.c help.h identity.c identity.h location.c location.h main.c main.h node.c node.h options.c options.h output.c output.h output_csv.c output_csv.h output_flat.c output_flat.h output_json.c output_json.h output_void.c output_void.h parse.c parse.h queue.c queue.h report.c report.h sce.c sce.h search.c search.h session.c session.h sock.c sock.h sock2.c sock2.h ring.c ring.h topology.c topology.h user.c user.h utils.c utils.h xalloc.c xalloc.h xconfig.c xconfig.h xsqlite.c xsqlite.h zipcode.c zipcode.h

#AM_CPPFLAGS = -I$(top_srcdir) -DSYSCONFDIR=\"$(sysconfdir)\"

## EOF
